force-app/main/default/objects/Leave__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Leaves</relationshipLabel>
    <relationshipName>Leaves</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>