force-app/main/default/objects/Leave__c/fields/Leave_From__c.field-meta.xml
<CustomField>
    <fullName>Leave_From__c</fullName>
    <label>Leave From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>