force-app/main/default/objects/Leave__c/fields/Leave_Nature__c.field-meta.xml
<CustomField>
    <fullName>Leave_Nature__c</fullName>
    <label>Leave Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>Half Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>