force-app/main/default/objects/Leave__c/fields/Leave_To__c.field-meta.xml
<CustomField>
    <fullName>Leave_To__c</fullName>
    <label>Leave To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>