force-app/main/default/objects/Leave__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>Leave_To__c</columns>
    <columns>Leave_From__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>